# TokenRun

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  repomix-output.xml  工程建设-step3.md  工程建设-step4.md  工程建设-step5.md  第三阶段-资源网关、隐私脱敏、增强型审计器.md  第四阶段-指挥塔-通讯协议与可视化交互设计.md
.claude/: settings.json
api/: main.py
core/: __init__.py  actor.py  app.py  context_cache.py  cost_scheduler.py  critic.py  drift_detector.py  eval_judge.py  jinja_env.py  ledger.py  mcp_server.py  models.py  orchestrator.py  output_sink.py  persistence.py  prompt_lineage.py  quality_gate.py  resilience.py  runner.py  sampling_manager.py  sandbox.py  self_healer.py  solidifier.py  task_queue.py  telemetry.py
docs/: README_CN.md  README_JP.md  README_KR.md  TokenRun落地方案-总览.md  api-reference.md  architecture.md  components.md  data-flow.md  deployment.md  developer-guide.md  user-manual.md  全系统集成方案与最小可行性案例.md  工程建设-step1.md  工程建设-step2.md  工程建设-step6.md  第一阶段-核心协议与元数据定义.md  第二阶段-Runner核心引擎与状态机控制.md  第五阶段-版本控制谱系与技能固化机制.md
gateway/: __init__.py  audio_gateway.py  batch_provider.py  duckdb_gateway.py  file_gateway.py  mcp_client.py  postgres_gateway.py  privacy.py  provider.py  s3_gateway.py  sql_gateway.py  video_gateway.py
runfiles/: test_mission.yaml
tests/: __init__.py  test_api.py  test_app.py  test_arbitrage.py  test_batch.py  test_concurrency.py  test_config_variants.py  test_context_cache.py  test_e2e.py  test_edge_cases.py  test_error_recovery.py  test_eval_judge.py  test_file_gateway.py  test_integration_deep.py  (+23 more)
(+26 files in other folders)
