[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenrun"
version = "0.1.0"
description = "Industrial-grade AI task execution framework with Loop Engineering"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
]

[project.scripts]
tokenrun = "main:cli"

[tool.setuptools.packages.find]
include = ["core*", "gateway*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
